--- a/public/resource/gallery/index.html
+++ b/public/resource/gallery/index.html
@@ -1,31 +1,31 @@
 <!-- ${title}="Gallery"-->
 <h1 class="custom-font">Gallery</h1>
 <div class="gallery">
-    <img src="images/kemono.png" alt="kemono.png" class="gallery-item">
-    <img src="images/urotsuki.png" alt="urostuki.png" class="gallery-item">
-    <img src="images/DOF.png" alt="DOF.png" class="gallery-item">
-    <img src="images/hawk.webp" alt="hawk.webp" class="gallery-item">
-    <img src="images/egg.jpg" alt="egg.jpg" class="gallery-item">
-    <img src="images/rotteen.webp" alt="rotteen.webp" class="gallery-item">
-    <img src="images/aaaa.png" alt="aaaa.png" class="gallery-item">
-    <img src="images/mantion.jpg" alt="mantion.jpg" class="gallery-item">
-    <img src="images/whip.png" alt="whip.png" class="gallery-item">
-    <img src="images/renard.jpg" alt="renard.jpg" class="gallery-item">
-    <img src="images/eye.png" alt="eye.png" class="gallery-item">
-    <img src="images/day.png" alt="day.png" class="gallery-item">
-    <img src="images/goldenhour.png" alt="goldenhour.png" class="gallery-item">
-    <img src="images/kemono.gif" alt="kemono.gif" class="gallery-item">
-    <img src="images/golden_carrot.png" alt="golden_carrot.png" class="gallery-item">
-    <img src="images/bi-dama.jpg" alt="bi-dama.jpg" class="gallery-item">
-    <img src="images/sakuya3d.png" alt="sakuya3d.png" class="gallery-item">
-    <img src="images/axe.png" alt="axe.png" class="gallery-item">
-    <img src="images/emerald.png" alt="emerald.png" class="gallery-item">
-    <img src="images/glass.png" alt="glass.png" class="gallery-item">
-    <img src="images/magik.png" alt="magik.png" class="gallery-item">
-    <img src="images/nanikore.png" alt="nanikore.png" class="gallery-item">
-    <img src="images/volcano.png" alt="volcano.png" class="gallery-item">
-    <img src="images/twitter.png" alt="twitter.png" class="gallery-item">
-    <img src="images/eraser.jpg" alt="eraser.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/kemono.png" alt="kemono.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/urotsuki.png" alt="urostuki.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/DOF.png" alt="DOF.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/hawk.webp" alt="hawk.webp" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/egg.jpg" alt="egg.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/rotteen.webp" alt="rotteen.webp" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/aaaa.png" alt="aaaa.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/mantion.jpg" alt="mantion.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/whip.png" alt="whip.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/renard.jpg" alt="renard.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/eye.png" alt="eye.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/day.png" alt="day.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/goldenhour.png" alt="goldenhour.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/kemono.gif" alt="kemono.gif" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/golden_carrot.png" alt="golden_carrot.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/bi-dama.jpg" alt="bi-dama.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/sakuya3d.png" alt="sakuya3d.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/axe.png" alt="axe.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/emerald.png" alt="emerald.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/glass.png" alt="glass.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/magik.png" alt="magik.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/nanikore.png" alt="nanikore.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/volcano.png" alt="volcano.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/twitter.png" alt="twitter.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/eraser.jpg" alt="eraser.jpg" class="gallery-item">
 </div>
     
 <div class="modal" id="modal" onclick="closeModal()">
