--- a/public/template.html
+++ b/public/template.html
@@ -14,9 +14,9 @@
 		<!-- ヘッダー部分 -->
 		<header id="banner">
 			<div id="title">
-				<img src="/images/output.gif" alt="Left Image" class="banner-img left-img" />
-				<a href="top"><img src="${baseURL}/images/title.png" alt="サイトタイトル" class="site-title" style="height: 100%" /></a>
-				<img src="/images/output.gif" alt="Right Image" class="banner-img right-img" />
+				<img src="${baseURL}/images/output.gif" alt="Left Image" class="banner-img left-img" />
+				<a href="${baseURL}/resource/top"><img src="${baseURL}/images/title.png" alt="サイトタイトル" class="site-title" style="height: 100%" /></a>
+				<img src="${baseURL}/images/output.gif" alt="Right Image" class="banner-img right-img" />
 			</div>
 		</header>
 		<!-- コンテンツ部分 -->
