文字コード指定

--- a/public/resource/live2d/index.html
+++ b/public/resource/live2d/index.html
@@ -1,4 +1,5 @@
 <!-- ${title}="Live2D"-->
+<meta charset="UTF-8" />
 <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.x/dist/pixi.min.js"></script>
