--- a/public/resource/live2d/index.html
+++ b/public/resource/live2d/index.html
@@ -5,7 +5,10 @@
 <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.x/dist/pixi.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/RaSan147/pixi-live2d-display@v0.5.0-ls-7/dist/index.min.js"></script>
 <style>
-    canvas { display: block; }
+    canvas { 
+        display: block; 
+        max-width:100%;
+    }
     #main {
         position: relative;
     }
