--- a/public/resource/others/index.html
+++ b/public/resource/others/index.html
@@ -17,6 +17,7 @@
     <hr>
     <section id="applications">
         <h2 class="custom-font">Applications</h2>
+        <a href="https://homepage.eringo216.workers.dev/resource/music-game-4key/">youtube to 4key mania</a>
         <a href="http://nubesuko.ddns.net:8080/share/marukeshi_webGL/">丸消し</a>←サーバー落ちてるかも・・<br>
         <a href="http://nubesuko.ddns.net:666">Tameiki-Logger Socket.io Edition(https://github.com/eringo216/TLSE)</a><br>
         ↑一番頑張ったけどfc2チャットが2025/6/2にサービス終了するから作った意味ない(´；ω；`)
