--- a/public/template.html
+++ b/public/template.html
@@ -43,6 +43,7 @@
 							<li><a href="/gallery/">ギャラリー</a></li>
 							<li><a href="/live2d/">Live2D展示室</a></li>
 							<li><a href="/others/">その他</a></li>
+							<li><a href="/resource/music-game-4key/">音ゲー</a></li>
 							<li style="display: none"><a href="OMOIKAMO">謎</a></li>
 						</ul>
 					</section>
