--- a/public/resource/gallery/index.html
+++ b/public/resource/gallery/index.html
@@ -26,6 +26,7 @@
     <img src="${baseURL}/resource/gallery/images/volcano.png" alt="volcano.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/twitter.png" alt="twitter.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/eraser.jpg" alt="eraser.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/franDOF.png" alt="franDOF.png" class="gallery-item">
 </div>
     
 <div class="modal" id="modal" onclick="closeModal()">
