--- a/public/template.html
+++ b/public/template.html
@@ -45,6 +45,7 @@
 							<li><a href="/others/">その他</a></li>
 							<li><a href="/resource/music-game-4key/">音ゲー</a></li>
 							<li style="display: none"><a href="OMOIKAMO">謎</a></li>
+							<li style="display: none"><a href="/resource/HCP/">Head-Coupled Off-axis MMD Viewer</a></li>
 						</ul>
 					</section>
 				</div>
