--- a/public/resource/others/index.html
+++ b/public/resource/others/index.html
@@ -6,6 +6,8 @@
 <main>
     <section id="videos">
         <h2 class="custom-font">Videos</h2>
+        <p> MMDモデル</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ykyzx25XN9I?si=5HY9zgFkiAL31XmS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>【Live2D Showcase】佐藤ほいっぷ</p><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/w0CG0aXvLyE?si=5HY9zgFkiAL31XmS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p> 3DCG</p><br>
