--- a/public/resource/top/index.html
+++ b/public/resource/top/index.html
@@ -7,7 +7,7 @@
     <section id="profile">
         <h2 class="custom-font">Profile</h2>
         <p><b>名前:</b> eringo216</p>
-        <p><b>年齢:</b> 10代後半</p>
+        <p><b>年齢:</b> 17</p>
         <p><b>活動内容:</b> イラスト制作, Live2Dモデル制作, 動画制作, プログラミング 等</p>
     </section>
     <hr>
@@ -53,7 +53,7 @@
         <a href="../commission">依頼の金額等 参考表</a>
 
         <p>ココナラもやってます。ココナラで依頼する場合は、下記のリンクからよろしくお願い致します。<br>
-        ※ココナラで依頼される場合、ココナラ外での連絡は規約違反となるため、連絡はココナラ内で済ませてください。</p>
+        ※ココナラで依頼される場合、ココナラ外での連絡は規約違反となるため、ココナラ内で済ませてください。</p>
         <a class="coconala-widget" href="https://coconala.com/services/3622881" data-service_id="3622881" data-width="468" data-comment="0" data-invite="0" data-user_id="5276798">格安! Live2Dをイラストから一括制作します イラスト＋モデリング込みで\70000です!</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://coconala.com/js/coconala_widget.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','coconala-wjs');</script>
     </section>
     <hr>
