--- a/public/resource/gallery/index.html
+++ b/public/resource/gallery/index.html
@@ -1,6 +1,10 @@
 <!-- ${title}="Gallery"-->
 <h1 class="custom-font">Gallery</h1>
 <div class="gallery">
+    <img src="${baseURL}/resource/gallery/images/sakuya1.png" alt="sakuya1.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/sakuyaface.png" alt="sakuyaface.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/sakuya.jpg" alt="sakuya.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/samune.png" alt="samune.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/kemono.png" alt="kemono.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/urotsuki.png" alt="urostuki.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/DOF.png" alt="DOF.png" class="gallery-item">
@@ -8,6 +12,7 @@
     <img src="${baseURL}/resource/gallery/images/egg.jpg" alt="egg.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/rotteen.webp" alt="rotteen.webp" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/aaaa.png" alt="aaaa.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/aaa.jpg" alt="aaa.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/mantion.jpg" alt="mantion.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/whip.png" alt="whip.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/renard.jpg" alt="renard.jpg" class="gallery-item">
@@ -27,6 +32,7 @@
     <img src="${baseURL}/resource/gallery/images/twitter.png" alt="twitter.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/eraser.jpg" alt="eraser.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/franDOF.png" alt="franDOF.png" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/fox.jpg" alt="fox.jpg" class="gallery-item">
 </div>
     
 <div class="modal" id="modal" onclick="closeModal()">
