--- a/public/resource/gallery/index.html
+++ b/public/resource/gallery/index.html
@@ -15,7 +15,6 @@
     <img src="${baseURL}/resource/gallery/images/aaa.jpg" alt="aaa.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/mantion.jpg" alt="mantion.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/whip.png" alt="whip.png" class="gallery-item">
-    <img src="${baseURL}/resource/gallery/images/renard.jpg" alt="renard.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/eye.png" alt="eye.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/day.png" alt="day.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/goldenhour.png" alt="goldenhour.png" class="gallery-item">
@@ -26,13 +25,12 @@
     <img src="${baseURL}/resource/gallery/images/axe.png" alt="axe.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/emerald.png" alt="emerald.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/glass.png" alt="glass.png" class="gallery-item">
-    <img src="${baseURL}/resource/gallery/images/magik.png" alt="magik.png" class="gallery-item">
-    <img src="${baseURL}/resource/gallery/images/nanikore.png" alt="nanikore.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/volcano.png" alt="volcano.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/twitter.png" alt="twitter.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/eraser.jpg" alt="eraser.jpg" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/franDOF.png" alt="franDOF.png" class="gallery-item">
     <img src="${baseURL}/resource/gallery/images/fox.jpg" alt="fox.jpg" class="gallery-item">
+    <img src="${baseURL}/resource/gallery/images/tanbo.jpg" alt="tanbo.jpg" class="gallery-item">
 </div>
     
 <div class="modal" id="modal" onclick="closeModal()">
