--- a/public/resource/top/index.html
+++ b/public/resource/top/index.html
@@ -8,7 +8,7 @@
         <h2 class="custom-font">Profile</h2>
         <p><b>名前:</b> eringo216</p>
         <p><b>年齢:</b> 17</p>
-        <p><b>活動内容:</b> イラスト制作, Live2Dモデル制作, 動画制作, プログラミング 等</p>
+        <p><b>活動内容:</b> イラスト制作, Live2Dモデル制作, 動画制作, プログラミング, モデリング 等</p>
     </section>
     <hr>
     <section id="about-me">
@@ -17,8 +17,8 @@
             こんにちは。eringoと申します。<br>
             普段は、趣味として上記のようなものを手掛けています。<br>
             幅広い分野に対応できるのが強みで、日々学びながら成長しています。<br>
-            現在、お仕事募集中です！<br>
-            もし私のスキルが必要な人がいれば、お気軽にお声掛けください。<br>
+            現在お仕事募集中です.<br>
+            もし私のスキルが必要な人がいればお気軽にお声掛けください。<br>
             あなたと一緒に何か面白いことができたら嬉しいです。<br>
         </p>
     </section>
