--- a/public/resource/viewer/index.html
+++ b/public/resource/viewer/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>BlockBypasser</title>
+  <title>Iframe News Viewer</title>
   <style>
     html,body {
       color: #ffffff;
@@ -106,8 +106,6 @@
         background: crimson;  /* チェック時の背景色 */
     }
   </style>
-  <!--<script src="https://unpkg.com/@ungap/custom-elements-builtin"></script>-->
-  <!--<script type="module" src="x-frame-bypass.js"></script>-->
 </head>
 <body>
   <details id="settings" class="container">
